gitlab/ingress/registry-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: gitlab
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    name: gitlab
