gitlab/ingress/gitlab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
    ingress.kubernetes.io/custom-response-headers: Referrer-Policy:no-referrer
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
spec:
  rules:
  - host: gitlab.nautilus.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlabreg
  namespace: gitlab
  labels:
    name: gitlabreg
    ingress.kubernetes.io/custom-response-headers: Referrer-Policy:no-referrer
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
spec:
  rules:
  - host: gitlab-registry.nautilus.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 5000
